src/objects/Stream_Request_Details__c.object
<CustomObject>
    <description>This object is used to capture request details specific to the request type on ERM cases.</description>
    <fields>
        <fullName>Access_Level_Confidential__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Reporting Access Level Confidential Indicator</description>
        <label>Access Level Confidential?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Add_Customer_Names_to_Email__c</fullName>
        <description>To Add multiple Customer Names to Email</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Add Customer Names to Email</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_NICE_Policy_Number_s__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Use a comma to separate each Policy Number.</inlineHelpText>
        <label>Additional NICE Policy Number(s)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <description>Age of the ERM Case</description>
        <formula>IF ( Case__r.IsClosed , Case__r.ClosedDate - CreatedDate,NOW() - CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Outstanding Since Creation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>All_users_have_same_permission_as_policy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>All users have same permission as policy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alternate_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Alternate ID</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appeal_Date__c</fullName>
        <description>Appeal Date for capturing on Reports</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Appeal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Appeal_Notes__c</fullName>
        <description>Appeal Notes for closed or denied requests</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Appeal Notes</label>
        <length>8000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Appeal_Reason__c</fullName>
        <description>Appeal Reason for the requests denied or closed incorrectly</description>
        <label>Appeal Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Over Retro Period (e.e.60 days)</fullName>
                </value>
                <value>
                    <fullName>Exclusion/Exception to retro policy</fullName>
                </value>
                <value>
                    <fullName>Eligibility Action Required</fullName>
                </value>
                <value>
                    <fullName>Invalid Denial - Should have been pended</fullName>
                </value>
                <value>
                    <fullName>Correction - Processed incorrectly</fullName>
                </value>
                <value>
                    <fullName>Correction - Not completed at all</fullName>
                </value>
                <value>
                    <fullName>Correction - Partially Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Appealed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Request Appealed or Not</description>
        <label>Appealed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approver_s_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Approver&apos;s Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approver_s_Title__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Approver&apos;s Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Basic_Life_Benefit_Amount_Requested__c</fullName>
        <description>Benefit Amount Requested for Basic Life</description>
        <label>Benefit Amount Requested</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Basic_Life_Occupational_Class__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Basic Life Occupational Class</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Basic_Life__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Basic Life</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Benefit_Factor_basic__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Benefit Factor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefit_Factor_suppl_ad_d__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Benefit Factor</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefit_Factor_suppl_life__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Benefit Factor</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Justification_for_unmasked_SSN__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Business Justification for unmasked SSN</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bypass_Validation_Rule__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bypass Validation Rule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CES_ASO_Only_Claims_EOB_View__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CES (ASO Only) Claims EOB View indicator</description>
        <label>CES (ASO Only) Claims EOB View</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>COBRA_Paid_Thru_Stop_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>COBRA Paid Thru/Stop Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CQER__c</fullName>
        <label>CQER</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Death of a covered employee</fullName>
                </value>
                <value>
                    <fullName>Dependent child&apos;s loss of dependent status</fullName>
                </value>
                <value>
                    <fullName>Divorce or legal separation</fullName>
                </value>
                <value>
                    <fullName>Employee entitled to Medicare</fullName>
                </value>
                <value>
                    <fullName>HMO member moving out of service area</fullName>
                </value>
                <value>
                    <fullName>Loss of coverage because employer files Chapter 11</fullName>
                </value>
                <value>
                    <fullName>Reduction in hours</fullName>
                </value>
                <value>
                    <fullName>SB1910</fullName>
                </value>
                <value>
                    <fullName>Total disability determined by the SSA</fullName>
                </value>
                <value>
                    <fullName>Voluntary or involuntary term of employment(not for gross misconduct)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Caller_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Caller Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Caller_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Caller Phone</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseCommentUploaded__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CaseCommentUploaded</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Request Details</relationshipLabel>
        <relationshipName>Request_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Check_for_Name_Address_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator to Check for Name/Address Change for EServices</description>
        <label>Check for Name/Address Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Check_to_make_this_user_CMA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Check to make this user CMA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Child_Count__c</fullName>
        <description>This stores the number of children when family selection is made as children.</description>
        <label>Child Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>City of the Agency or Broker for EServices</description>
        <encryptionScheme>None</encryptionScheme>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <description>Closed Date of ERM case</description>
        <formula>Case__r.ClosedDate</formula>
        <label>Closed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Comments_or_Special_Instructions__c</fullName>
        <description>Comments or Special Instructions for EServices</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments or Special Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Communication_Center_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Communication Center Only captured for EServices</description>
        <inlineHelpText>Tools for Wellness Only</inlineHelpText>
        <label>Communication Center Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Count_of_Reports_Requested__c</fullName>
        <label>Count of Reports Requested</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Coverage_Type__c</fullName>
        <label>Coverage Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Dental</fullName>
                </value>
                <value>
                    <fullName>Vision</fullName>
                </value>
                <value>
                    <fullName>RX - Medco/Express Scripts</fullName>
                </value>
                <value>
                    <fullName>GX - OptumRx</fullName>
                </value>
                <value>
                    <fullName>S - Stand Alone</fullName>
                </value>
                <value>
                    <fullName>Life</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Customer Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOL_Final_Rule_Exception__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DOL Final Rule Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Of_Hire__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Of Hire</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dental_Plan__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Dental Plan PVRC</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dental__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dental</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dependent_Count__c</fullName>
        <label>Dependent Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Division_Account_type__c</fullName>
        <description>EServices Division Account Type</description>
        <label>Division Account type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Small Business (1-99 subscribers)</fullName>
                </value>
                <value>
                    <fullName>Key Account (over 100 subscribers, Options are not applicable for customers with less than 100 enrolled medical subscribers)</fullName>
                </value>
                <value>
                    <fullName>National Account (Uniprise Strategic Services) (over 100 subscribers, Options are not applicable for customers with less than 100 enrolled medical subscribers)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ERM_Case_Status__c</fullName>
        <description>ERM Case Status related to the request details.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>ERM Case Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ETS_BE_ISET_ACET_Request_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ETS-BE/ISET/ACET Request ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>If completed form/document is attached, include the earliest effective date.</inlineHelpText>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employee_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Employee ID</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Environment__c</fullName>
        <label>Environment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Production</fullName>
                </value>
                <value>
                    <fullName>Test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estimated_Transactions__c</fullName>
        <label>Estimated Transactions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Explanation__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Explanation</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ExternalClientEmail__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>External Client Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Family_Selection__c</fullName>
        <description>Family Selection captured for a stream request.</description>
        <label>Family Selection</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Employee</fullName>
                </value>
                <value>
                    <fullName>Spouse</fullName>
                </value>
                <value>
                    <fullName>Domestic Partner/Civil Union</fullName>
                </value>
                <value>
                    <fullName>Child(ren)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flat_Amount_basic__c</fullName>
        <label>Flat Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Flat_Amount_suppl_ad_d__c</fullName>
        <label>Flat Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Flat_Amount_suppl_life__c</fullName>
        <label>Flat Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Group_Phone_Fax__c</fullName>
        <description>Group Phone Fax for Group Level Updates</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Group Phone Fax</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Phone_Number__c</fullName>
        <description>Group Phone Number for Group level Updates</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Group Phone Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HMO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HMO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HSA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IEX_Picklist__c</fullName>
        <label>IEX</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IEX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IEX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>INactivate_the_user_profile_abo__c</fullName>
        <label>Inactivate/Reactivate user profile above</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>INactivate the user profile</fullName>
                </value>
                <value>
                    <fullName>REactivate the user profile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>I_have_a_completed_form_document__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Have completed document for processing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>I_understand_and_accept_the_risks__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>I understand and accept the risks of changing the member&apos;s Alt ID as described below.</inlineHelpText>
        <label>I understand and accept the risks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Integrated_Administration__c</fullName>
        <label>Integrated Administration</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice_Month_s_Needed__c</fullName>
        <label>Invoice Month(s) Needed</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Policy_Transferred__c</fullName>
        <label>Policy Transferred to other UHG Platform</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is used to identify if a stream request is submitted.</description>
        <label>Is Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LTD_Buy_Up__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LTD Buy Up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LTD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LTD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Location Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Site_Dental__c</fullName>
        <label>Market Site</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Market_Site_Medical__c</fullName>
        <label>Market Site</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Market_Site_Rx__c</fullName>
        <label>Market Site</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Market_Site_Vision__c</fullName>
        <label>Market Site</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Market_Site_med_suppl__c</fullName>
        <label>Market Site</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Market_Site_standalone__c</fullName>
        <label>Market Site</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Medical_Group_Number_s__c</fullName>
        <description>Medical Group Numbers for Reporting Type</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Medical Group Number(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_Supplemental__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Medical Supplemental</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Medical__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Medical</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Middle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NICE_Company_Code__c</fullName>
        <label>NICE Company Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>22 - Colorado</fullName>
                </value>
                <value>
                    <fullName>25 - Arizona</fullName>
                </value>
                <value>
                    <fullName>26 - Nevada</fullName>
                </value>
                <value>
                    <fullName>33 - California</fullName>
                </value>
                <value>
                    <fullName>36 - Washington</fullName>
                </value>
                <value>
                    <fullName>43 - Oregon</fullName>
                </value>
                <value>
                    <fullName>44 - Oklahoma</fullName>
                </value>
                <value>
                    <fullName>45 - Texas</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>Name of the agency or group for EServices</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_person_authorizing_this_change__c</fullName>
        <description>Name of person authorizing this change for Group Level Updates</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Name of person authorizing this change</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Billing_Address__c</fullName>
        <description>New Billing Address for Group Level Updates</description>
        <encryptionScheme>None</encryptionScheme>
        <label>New Billing Address</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>New_Billing_City__c</fullName>
        <description>New Billing City</description>
        <encryptionScheme>None</encryptionScheme>
        <label>New Billing City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Billing_State__c</fullName>
        <description>New Billing State</description>
        <encryptionScheme>None</encryptionScheme>
        <label>New Billing State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Billing_Zip__c</fullName>
        <description>New Billing Zip</description>
        <label>New Billing Zip</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Physical_Address__c</fullName>
        <description>New Physical Address</description>
        <encryptionScheme>None</encryptionScheme>
        <label>New Physical Address</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>New_Physical_City__c</fullName>
        <description>New Physical City</description>
        <encryptionScheme>None</encryptionScheme>
        <label>New Physical City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Physical_State__c</fullName>
        <description>New Physical State</description>
        <encryptionScheme>None</encryptionScheme>
        <label>New Physical State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Physical_Zip__c</fullName>
        <description>New Physical Zip</description>
        <label>New Physical Zip</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Platform__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>New Platform</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Policy_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>New Policy Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Reporting__c</fullName>
        <defaultValue>false</defaultValue>
        <description>No Reporting indicator for Eservices</description>
        <inlineHelpText>Check this box if you want to remove the reporting from this user profile. Leave it unchecked if there is no change to reporting</inlineHelpText>
        <label>No Reporting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OHSB_PRIME_LD_Class_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OHSB/PRIME LD Class Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Optum_ID__c</fullName>
        <description>Optum ID for EService request type</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Optum ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_COBRA_Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Original COBRA Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>POS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>POS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PPO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PPO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PRIME_Customer_Number_s_to_Reinstate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PRIME Customer Number(s) to Reinstate</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRIME_Customer_Number_s_to_Terminate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PRIME Customer Number(s) to Terminate</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRIME_Policy_Number_s_to_Reinstate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PRIME Policy Number(s) to Reinstate</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRIME_Policy_Number_s_to_be_Terminated__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PRIME Policy Number(s) to Terminate</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSCustomerNumber__c</fullName>
        <label>PS Customer Number</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PVRC_Dental__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PVRC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PVRC_Inclusions_Exclusions__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>PVRC Inclusions/Exclusions selected here will apply to all reports selected.
If selected reports require different Inclusions/Exclusions, a separate STREAM request will need to be submitted.

Maximum limit 500 characters.</inlineHelpText>
        <label>PVRC Inclusions/Exclusions</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PVRC_Med_Suppl__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PVRC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>